# gnome-icon-theme-extras

./: AUTHORS  ChangeLog  MAINTAINERS  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  configure  configure.ac  gnome-icon-theme-extras.doap  gnome-icon-theme-extras.pc.in  project.config  render-icon-theme.py
CodeTango/16x16/mimetypes/: application-x-php.xcf  application-x-ruby.xcf  text-x-boo.xcf  text-x-java-source.xcf  text-x-python.xcf
CodeTango/22x22/mimetypes/: application-x-php.xcf  application-x-ruby.xcf  text-x-boo.xcf  text-x-java-source.xcf  text-x-python.xcf
Gadgetango/16x16/devices/: multimedia-player-apple-ipod-shuffle-clip.xcf.bz2
Gadgetango/22x22/devices/: multimedia-player-apple-ipod-shuffle-clip.xcf.bz2
src/: Makefile.in
temp/: README
